@@ -11,9 +11,17 @@ o Nmap gen2 OS detection used to always do 2 retries if it fails to
   new --max-os-tries option lets you specify a or higher maximum
   number of tries.
 
+o Added --unprivileged option, which is the opposite of --privileged.
+  It tells Nmap to treat the user as lacking network raw socket and
+  sniffing privileges.  This is useful for testing, debugging, or when
+  the raw network functionality of your operating system is somehow
+  broken.
+
 o Fixed a confusing error message which occured when you specified a
   ping scan or list scan, but also specified -p (which is only used for
   port scans).  Thanks to Thomas Buchanan for the patch.
+
+o Applied some small cleanup patches from Kris Katterjohn
 
 4.20ALPHA8
 
